[RS6000] Built-in __PCREL__ define

Useful in assembly to know details of power10 function calls.

	PR target/97166
	* config/rs6000/rs6000-c.c (rs6000_target_modify_macros):
	Conditionally define __PCREL__.

(cherry picked from commit 677b9150f54a0483d3de1182ac40717b7c4431a5)